namespace SearchApi.Search;

public class SearchConfig
{
    public bool CaseSensitive { get; set; }
}
