@startuml
!pragma layout smetana
skinparam linetype ortho
skinparam packageStyle rectangle

legend left
  Yellow = planned v2
  Blue/Green = existing now
endlegend

package "SearchApi.Search (to-be v2)" {
  class SearchService #D8EAFE {
    + Search(request: SearchRequest): SearchResult
  }

  class "CachedSearchService <<planned>>" as CachedSearchService #FFF3C4 {
    + Search(request: SearchRequest): SearchResult
  }

  class SearchLogic #D8EAFE {
    + Search(query: string[], maxAmount: int): SearchResult
  }

  class SearchConfig #D8EAFE {
    + CaseSensitive: bool
  }

  interface IDatabase #E2E8F0 {
    + GetWordIds(word, caseSensitive): List<int>
    + GetDocDetails(docId): BEDocument
    + GetDocumentWordMatches(wordIds): Dictionary<int, HashSet<int>>
  }

  class DatabaseSqlite #D8EAFE
  class DatabasePostgres #D8EAFE

  class DatabaseFactory #D8EAFE {
    + Create(database: string): IDatabase
  }

  interface "IQueryCache <<planned>>" as IQueryCache #FFF3C4 {
    + TryGet(key): SearchResult?
    + Set(key, value, ttl)
  }

  class "RedisQueryCache <<planned>>" as RedisQueryCache #FFF3C4

  class "CacheKeyBuilder <<planned>>" as CacheKeyBuilder #FFF3C4 {
    + Build(request, shard): string
  }

  interface "IZAxisRouter <<planned>>" as IZAxisRouter #FFF3C4 {
    + ResolveShard(request): string
  }

  class "TenantShardRouter <<planned>>" as TenantShardRouter #FFF3C4

  interface "IMetricsRecorder <<planned>>" as IMetricsRecorder #FFF3C4 {
    + RecordCacheHit()
    + RecordCacheMiss()
    + RecordLatency(ms)
  }
}

package "SearchLoadBalancer.LoadBalancing" {
  interface IBackendScheduler #E2E8F0 {
    + Name: string
    + GetStartIndex(count): int
  }

  class RoundRobinBackendScheduler #D8EAFE
  class RandomBackendScheduler #D8EAFE

  class BackendSchedulerFactory #D8EAFE {
    + Create(strategy): IBackendScheduler
  }

  class LoadBalancerOptions #D8EAFE {
    + Strategy: string
    + BackendTimeoutSeconds: int
    + Backends: List<BackendEndpoint>
  }

  class BackendEndpoint #D8EAFE {
    + Name: string
    + BaseUrl: string
  }

  class LoadBalancerStatsStore #D8EAFE {
    + RecordAttempt()
    + RecordSuccess()
    + RecordFailure()
    + Snapshot(): LoadBalancerStatsSnapshot
  }
}

package "Shared.Model" {
  class SearchRequest #DCFCE7 {
    + Query: string
    + MaxAmount: int
    + CaseSensitive: bool
    + Database: string
    + TenantKey: string <<planned>>
  }

  class SearchResult #DCFCE7 {
    + Query: string[]
    + NoOfHits: int
    + DocumentHits: List<DocumentHit>
    + Ignored: List<string>
    + TimeUsed: TimeSpan
    + CacheHit: bool <<planned>>
  }

  class DocumentHit #DCFCE7 {
    + Document: BEDocument
    + NoOfHits: int
    + Missing: List<string>
  }

  class BEDocument #DCFCE7 {
    + Id: int
    + Url: string
    + IdxTime: DateTime
    + CreationTime: DateTime
  }
}

SearchService --> CachedSearchService : delegates
CachedSearchService --> SearchLogic : uses
CachedSearchService --> IQueryCache : uses
CachedSearchService --> CacheKeyBuilder : build key
CachedSearchService --> IZAxisRouter : resolve shard
CachedSearchService --> IMetricsRecorder : record
SearchLogic --> IDatabase : uses
SearchLogic --> SearchConfig : uses
DatabaseFactory --> IDatabase : create
DatabaseSqlite ..|> IDatabase
DatabasePostgres ..|> IDatabase
RedisQueryCache ..|> IQueryCache
TenantShardRouter ..|> IZAxisRouter

BackendSchedulerFactory --> IBackendScheduler : strategy
RoundRobinBackendScheduler ..|> IBackendScheduler
RandomBackendScheduler ..|> IBackendScheduler
LoadBalancerOptions *-- "1..*" BackendEndpoint
LoadBalancerStatsStore --> BackendEndpoint : tracks

CachedSearchService --> SearchRequest : input
CachedSearchService --> SearchResult : output
SearchResult *-- "0..*" DocumentHit
DocumentHit --> BEDocument
@enduml
